fix form alignment for user mgmt group and user editing

--- a/src/app/features/user-mgmt/groups/group-edit/group-edit.component.scss
+++ b/src/app/features/user-mgmt/groups/group-edit/group-edit.component.scss
@@ -17,18 +17,17 @@ form {
 
   .form-actions {
     display: flex;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
 
     :first-child {
       margin-right: 0.5rem;
     }
   }
+
+  mat-form-field {
+    min-width: 15rem;
+  }
 }
 
-mat-form-field {
-  min-width: 27rem;
-}
 
 .permissions-fieldset {
   border: 1px solid var(--mat-sys-outline-variant);
