--- a/src/app/features/user-mgmt/users/user-edit/user-edit.component.scss
+++ b/src/app/features/user-mgmt/users/user-edit/user-edit.component.scss
@@ -18,17 +18,15 @@ form {
 
   .form-actions {
     display: flex;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
 
     :first-child {
       margin-right: 0.5rem;
     }
   }
-}
 
-mat-form-field {
-  min-width: 27rem;
+  mat-form-field {
+    min-width: 27rem;
+  }
 }
 
 .groups-fieldset {
